<resources>
    <string name="app_name">finanzas_old_school</string>
    <string name="category_title">Registro de Categoría</string>
    <string name="category_name">Ingrese el nombre</string>
    <string name="category_type">Seleccione el tipo</string>
    <string name="category_incomes">Ingresos</string>
    <string name="category_expenses">Gastos</string>
    <string name="save_category">Guardar</string>


    <string name="incomes_and_expenses_title">Registro de Ingresos y Gastos</string>
    <string name="concept_field_hint">Digite el concepto</string>
    <string name="value_field_hint">Digite el valor</string>
    <string name="income_textView">Ingreso</string>
    <string name="expense_textView">Gasto</string>
    <string name="date_hint">Digite la fecha</string>
    <string name="save_income_or_expense_button">Guardar</string>
    <string name="category_selector_spinner">Elija la categoría</string>
    <string name="go_to_movement_form">Ir a formulario de movimientos</string>
    <string name="go_to_category_form">Ir a formulario de categoría</string>
    <string name="goToMovementForm">Ir a formulario de movimientos</string>

    <string name="categoryItem">Ir a formulario de categoría</string>
    <string name="movementsItem">Ir a formulario de movimientos</string>
    <string name="go_to_category_list">Ir a lista de categorías</string>
    <string name="go_to_movements_list">Ir a lista de movimientos</string>
    <!-- Agregado por AVS -->
    <string name="go_to_movements_list_view_ttl">listado de movimientos</string>
    <string name="btn_text_buscar">Buscar</string>




</resources>